2003-02-06  Ben Wing  <ben@xemacs.org>

	* lread.c (Fload_internal):
	Oops.  Plain C can't handle declarations intermixed with statements.

2003-02-06  Ben Wing  <ben@xemacs.org>

	* alloc.c:
	* alloc.c (GC_CHECK_NOT_FREE):
	* alloc.c (mark_object_maybe_checking_free):
	* alloc.c (mark_with_description):
	* alloc.c (mark_object):
	Implement tail-recursion in KKCC when the last-marked object is
	a Lisp object, to avoid stack-overflow errors when marking long
	lists.  Factor out some duplicated error-checking into macros.

2003-02-05  Ben Wing  <ben@xemacs.org>

	* Makefile.in.in (update-elc.stamp):
	NOBYTECOMPILE -> BYTECOMPILE_CHANGE.

	* esd.c (esd_play_sound_data):
	Warning fixes.
	
	* fns.c:
	* fns.c (mark_bit_vector):
	* fns.c (Frequire):
	* fns.c (vars_of_fns):
	Eliminate bogus require-prints-loading-message; use already
	existent load-always-display-messages instead.  Make sure `load'
	knows we are coming from `require'.
	
	* lread.c:
	* lread.c (READCHARFUN_MAYBE):
	* lread.c (Fload_internal):
	* lread.c (PRINT_LOADING_MESSAGE_1):
	* lread.c (PRINT_LOADING_MESSAGE):
	* lread.c (vars_of_lread):
	Turn on `load-warn-when-source-newer' by default.  Change loading
	message to indicate when we are `require'ing.  Eliminate
	purify_flag hacks to display more messages; instead, loadup and
	friends specify this explicitly with
	`load-always-display-messages'.  Add spaces when batch to clearly
	indicate recursive loading.  Fassoc() does not GC so no need to
	gcpro.

	* gui-x.c:
	* gui-x.c (snarf_widget_values_for_gcpro):
	* gui-x.c (gcpro_popup_callbacks):
	* gui-x.h:
	* menubar-x.c:
	* menubar-x.c (pre_activate_callback):
	* menubar-x.c (set_frame_menubar):
	Fix up crashes when selecting menubar items due to lack of GCPROing
	of callbacks in lwlib structures.

	* eval.c (Fbacktrace):
	* lisp.h:
	* print.c:
	* print.c (canonicalize_printcharfun):
	Don't canonicalize to selected-frame when noninteractive, or